# openclaw-email-assistant

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  openclaw.json  pyproject.toml  requirements.txt  skill.py  start.py  test_quick.py
.github/workflows/: ci.yml
config/: default.yaml  schema.json
docs/: API.md  ARCHITECTURE.md  SETUP.md
examples/: docker-compose.yml  openclaw-config.json
google_meetings/: SKILL.md  __init__.py  skill.json  skill.py
scripts/: setup.sh
src/: __init__.py  bounce_detector.py  email_bridge.py  nlu_parser.py  utils.py
templates/: email_templates.jinja2
tests/: test_bounce.py  test_parser.py
